--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -187,6 +187,7 @@
      <Compile Include="Assets\Scripts\InterfaceController.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\Restaurant.cs" />
+     <Compile Include="Assets\Tools.cs" />
      <None Include="Assets\NGUI\Examples\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\NGUI\ReadMe - 3.6.8.txt" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Text 2.shader" />
