--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -191,6 +191,7 @@
      <Compile Include="Assets\Scripts\Restaurant.cs" />
      <Compile Include="Assets\Scripts\Tools.cs" />
      <Compile Include="Assets\Scripts\UserDatabase.cs" />
+     <Compile Include="Assets\UpdateVersion.cs" />
      <None Include="Assets\NGUI\Examples\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\NGUI\ReadMe - 3.6.8.txt" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Text 2.shader" />
