--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -181,6 +181,7 @@
      <Compile Include="Assets\NGUI\Scripts\UI\UITexture.cs" />
      <Compile Include="Assets\NGUI\Scripts\UI\UITooltip.cs" />
      <Compile Include="Assets\NGUI\Scripts\UI\UIViewport.cs" />
+     <Compile Include="Assets\PlayerPanel.cs" />
      <Compile Include="Assets\ProfileMenuHandler.cs" />
      <Compile Include="Assets\ProfileMenuItem.cs" />
      <Compile Include="Assets\Scripts\AudioController.cs" />
