Workaround for color buttons flipped
This issue is getting very annoying

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,19 @@ ehthumbs.db
 
 Thumbs.db
 
+
+Library/ScriptAssemblies/Assembly-CSharp.dll.mdb
+
+Library/assetDatabase3
+
+Library/expandedItems
+
+Library/InspectorExpandedItems.asset
+
+Library/metadata/00/00000000000000004000000000000000
+
+Library/metadata/33/33786c8557ea04bab924dd391e1f11aa
+
+Library/metadata/83/83cc342a5c0c64bbd8f80a169c4b77de
+
+Library/ScriptAssemblies/Assembly-CSharp.dll
